--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../build/react.js"></script>
-    <script src="../build/react-dom.js"></script>
-    <script src="../build/browser.min.js"></script>
+    <meta charset="utf8">
+    <script src="http://cdn.bootcss.com/react/0.14.7/react.js"></script>
+    <script src="http://cdn.bootcss.com/react/0.14.7/react-dom.js"></script>
+    <script src="http://cdn.bootcss.com/babel-core/5.8.34/browser.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./build/mock-min.js"></script>
   </head>
   <body>
     <script type="text/babel">
@@ -71,12 +74,125 @@
           );
         }
       });
-
+      
+      var Comment = React.createClass({
+        render: function(){
+          return (
+            <div className="comment">
+              <h1>{this.props.author}</h1>
+              <p>{this.props.text}</p>
+            </div>
+          )
+        }
+      });
+      var CommentList = React.createClass({
+        render: function(){
+          var str = this.props.data.map(function(e,i){
+            return (
+              <Comment author={e.author} text={e.text} key={e.id}/>
+            )
+          })
+          return (
+            <div className="commentList">
+              {str}        
+            </div>
+          )
+        }
+      });
+      var CommentForm = React.createClass({
+        getInitialState:function(){
+          return {
+            author: '',
+            text: ''
+          }
+        },
+        handleAuthor: function(e){
+          this.setState({author: e.target.value})
+        },
+        handleText: function(e){
+          this.setState({text: e.target.value})
+        },
+        handleSubmit:function(){
+          var text = this.state.text,
+              author = this.state.author;
+          if(!author||!text){
+            alert('请填写完整信息')
+          }else{
+            this.props.onCommentSubmit({author: author,text:text});
+            this.setState({author:'',text:''})
+          }
+        },
+        render: function(){
+          return (
+            <div className="commentForm">
+              <form>
+                <input type="text" value={this.state.author} autofocus="true" placeholder="请输入名字" onChange={this.handleAuthor}/>
+                <textarea placeholder="请输入评论" onChange={this.handleText} value={this.state.text}></textarea>
+                <button type="button" onClick={this.handleSubmit}>提交</button>
+              </form>
+            </div>
+          )
+        }
+      });
+      var CommentBox = React.createClass({
+        getInitialState: function(){
+          return {
+            data: [],
+          }
+        },
+        loadComment: function(){
+           $.ajax({
+            url: this.props.url,
+            success: function(data){
+              data = JSON.parse(data);
+              console.log(data.data)
+              this.setState({
+                data:data.data,
+              })
+            }.bind(this),
+            error:function(err){
+              console.log(err);
+            }
+          });
+          setTimeout(this.loadComment,this.props.refresh);
+        },
+        handleCommentSubmit: function(comment){
+          var comments = this.state.data;
+          this.setState({data:comments.concat([comment])});
+        },
+        componentDidMount: function(){
+         this.loadComment();
+        },
+        render: function(){
+          return (
+            <div className="commentBox">
+              <h1>评论</h1>
+              <CommentList data={this.state.data}/>
+              <CommentForm onCommentSubmit={this.handleCommentSubmit}/>
+            </div>
+          )
+        }
+      });
+      var Random = Mock.Random;
+      Random.cname();
+      Random.csentence(10.30);
+      Mock.mock('http://g.cn',{
+        'data|4-10':[{
+          'id|0-30': 1,
+          'author': '@cname',
+          'text': '@csentence',
+        }] 
+      });
       ReactDOM.render(
         <Hello name="Daisy He"/>,
         document.getElementById('text')
       );
+      ReactDOM.render(
+        <CommentBox url='http://g.cn' refresh={20000}/>,
+        document.getElementById('content')
+      );
     </script>
     <div id="text"></div>
+    <div id="content"></div>
   </body>
 </html>
